--- a/public/css/_about.scss
+++ b/public/css/_about.scss
@@ -59,6 +59,42 @@
     }
 }
 
+.home-bussiness {
+    padding: 135px 0;
+    background-image: url(../img/Business-bg.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    &_text {
+        background-color: $main-blue;
+        width: 50%;
+        transform: translate(10px, 10px);
+    }
+    &_inner {
+        background-color: #fff;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        padding: 70px;
+        transform: translate(-10px, -10px);
+        .title-home {
+            margin-bottom: 20px;
+        }
+    }
+    &.inner {
+        .home-bussiness {
+            &_text {
+                background-color: transparent;
+            }
+            &_inner {
+                background-color: transparent;
+                box-shadow: none;
+            }
+        } 
+        .intro_content {
+            color: $gray-48;
+        }
+    }
+}
+
 @media screen and (max-width:1399.98px) {
     .company {
         &_inner {
@@ -72,6 +108,11 @@
         &_pic {
             top: 50%;
             transform: translateY(-50%);
+        }
+    }
+    .home-bussiness {
+        &_inner {
+            padding: 50px;
         }
     }
 }
@@ -99,12 +140,41 @@
             display: none;
         }
     }
+    .home-bussiness {
+        background-image: none;
+        padding: 0;
+        &_text {
+            transform: none;
+            background-color: transparent;
+            width: 100%;
+            padding: 50px 70px;
+        }
+        &_inner {
+            box-shadow: none;
+            background-color: transparent;
+            padding: 0;
+            transform: none;
+        }
+        &.inner {
+            .intro_content {
+                color: $gray-46;
+            }
+        }
+    }
 }
 
 @media screen and (max-width:767.98px) {
     .company {
         &_text {
             padding: 40px 20px;
+        }
+    }
+}
+
+@media screen and (max-width:575.98px) {
+    .home-bussiness {
+        &_text {
+            padding: 50px 30px;
         }
     }
 }
