--- a/public/css/_news.scss
+++ b/public/css/_news.scss
@@ -64,7 +64,10 @@
     &_detail {
         &_pic {
             width: 40%;
-            padding-bottom: calc(40% * 0.7067);
+            .content_detail_pic_inner {
+                width: 100%;
+                padding-bottom: 70.67%;
+            }
         }
         &_content {
             margin: 30px 0 0;
@@ -112,7 +115,10 @@
         &_detail {
             &_pic {
                 width: 90%;
-                padding-bottom: calc(90% * 0.7067);
+                // padding-bottom: calc(90% * 0.7067);
+            }
+            &_text {
+                width: 100%;
             }
         }
     }
