--- a/public/css/_video.scss
+++ b/public/css/_video.scss
@@ -90,13 +90,28 @@
             width: 100%;
             padding-bottom: 60%;
             position: relative;
-            img {
+            video {
                 position: absolute;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 top: 0;
                 left: 0;
+            }
+            img {
+                position: absolute;
+                width: 60px;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                cursor: pointer;
+            }
+            &.playing {
+                img {
+                    width: 100%;
+                    height: 100%;
+                    opacity: 0;
+                }
             }
         }
         .modal-body {
